fix some bugs, merge reference and ciation